SERVER-13702 Commands without optional query may target to wrong shards on mongos